--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,8 +15,12 @@
 
     </style>
 
-    <style name="questioncolor" parent="Theme.AppCompat.CompactMenu">
-        <item name="android:textColor">#212121</item>
+    <style name="questionTheme" parent="Theme.AppCompat.CompactMenu">
+        <item name="android:textColor">@color/colorQuestions</item>
+        <item name="android:textSize">@dimen/qsize</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:padding">@dimen/ansPadding</item>
+
     </style>
 
 </resources>
